[tool.poetry]
name = "lala-bot"
version = "2.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
python-dotenv = "^0.15.0"
flask = "^1.1.2"
youtube-dl = "^2021.2.22"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
